[package]
name = "hal_kv"
version = "0.1.0"
authors = ["JLer <jlerxky@live.com>"]
edition = "2021"
description = "A kv hybrid access layer"
categories = ["filesystem"]
keywords = ["kv", "cache", "ttl", "sled", "moka"]
readme = "README.md"
repository = "https://github.com/prime-rs/hal_kv"
license = "Apache-2.0"

[features]
default = []

[dependencies]
arrow = "52"
bytes = "1.6"
color-eyre = "0.6"
futures-util = "0.3"
moka = { version = "0.12", features = ["sync"] }
once_cell = "1.19"
parquet = { version = "52", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["fs", "io-util"] }
tonbo = { git = "https://github.com/tonbo-io/tonbo" }
tonbo_macro = { git = "https://github.com/tonbo-io/tonbo" }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.38", features = ["time", "rt-multi-thread"] }
serde_json = "1.0"

[lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
# unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[lints.clippy]
missing_const_for_fn = "warn"

[[example]]
name = "eviction"
path = "examples/eviction.rs"
