[package]
name = "hal_kv"
version = "0.1.0"
authors = ["JLer <jlerxky@live.com>"]
edition = "2021"
description = "A kv hybrid access layer"
categories = ["filesystem"]
keywords = ["kv", "cache", "ttl", "sled", "moka"]
readme = "README.md"
repository = "https://github.com/prime-rs/hal_kv"
license = "Apache-2.0"

[features]
default = []

[dependencies]
bytes = "1.7"
color-eyre = "0.6"
moka = { version = "0.12", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
redb = "2.1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.39", features = ["time", "rt-multi-thread"] }
serde_json = "1.0"

[lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
# unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[lints.clippy]
missing_const_for_fn = "warn"

[[example]]
name = "eviction"
path = "examples/eviction.rs"
